# qingzhenyun_downloader

./: CMakeLists.txt  CMakeSettings.json
src/: main.cpp  stdafx.cpp  stdafx.h
src/downloader/: multipart_file_downloader.cpp  multipart_file_downloader.h  pplx_downloader.cpp  pplx_downloader.h
src/test/: WcsToolbox.cpp  WcsToolbox.h
src/timer/: simple_timer.cpp  simple_timer.h
src/wcs/: wcs_toolbox.cpp  wcs_toolbox.h
